// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapApp snapshot tests should list devices matching the selected marker and show the address 1`] = `
<div
  className="map-app-container"
>
  <header
    className="map-app-header"
  >
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <img
          alt="logo"
          className="map-app-header-brand-logo"
          src="test-file-stub"
        />
        <p
          className="map-app-header-brand-text"
        >
          map
        </p>
      </div>
    </div>
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <button
          className="map-app-header-user-button"
          data-testid="userButton"
          onClick={[Function]}
        >
          <img
            alt="login-header-account"
            className="map-app-header-account-image"
            src="test-file-stub"
          />
          <p
            className="map-app-header-account-text"
          >
            loginAction
          </p>
        </button>
        <img
          alt="map-app-header-apps-google-play"
          src="test-file-stub"
        />
        <img
          alt="map-app-header-apps-app-store"
          src="test-file-stub"
        />
      </div>
    </div>
  </header>
  <div
    className="device-marker-description-window"
  >
    <div
      className="marker-address-container"
    >
      <img
        alt="marker-address-image"
        className="marker-address-image"
        src="test-file-stub"
      />
      <div
        className="marker-address"
      >
        <p>
          Street and number
        </p>
        <span>
          District and city
        </span>
      </div>
    </div>
    <div
      className="device-list-container"
    >
      <div
        className="device-list-item-container"
      >
        <div
          className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-first"
        />
        <div
          className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-first"
        />
        <img
          alt="device-list-item-image"
          className="device-list-item-image"
          src="test-file-stub"
        />
        <div
          className="device-list-item"
        >
          <p>
            test device 1
          </p>
          <button
            className="device-list-item-opaque-text"
          >
            deviceReportBroken
          </button>
        </div>
      </div>
      <div
        className="device-list-item-container"
      >
        <div
          className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-second"
        />
        <div
          className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-second"
        />
        <img
          alt="device-list-item-image"
          className="device-list-item-image"
          src="test-file-stub"
        />
        <div
          className="device-list-item"
        >
          <p>
            test device 3
          </p>
          <button
            className="device-list-item-opaque-text"
          >
            deviceReportBroken
          </button>
        </div>
      </div>
      <div
        className="device-list-item-container"
      >
        <div
          className="device-list-item-shadow device-list-item-shadow-left device-list-create-device-item-shadow-left"
        />
        <div
          className="device-list-item-shadow device-list-item-shadow-right device-list-create-device-item-shadow-right"
        />
        <img
          alt="device-list-item-image"
          className="device-list-item-image"
          src="test-file-stub"
        />
        <div
          className="device-list-item"
        >
          <p
            className="device-list-item-opaque-text"
          >
            deviceNoDeviceHere
          </p>
          <button
            data-testid="createDeviceButton"
            onClick={[Function]}
          >
            deviceAddDevice
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="device-map"
  />
</div>
`;

exports[`MapApp snapshot tests should list devices matching the selected marker and show the loader 1`] = `
<div
  className="map-app-container"
>
  <header
    className="map-app-header"
  >
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <img
          alt="logo"
          className="map-app-header-brand-logo"
          src="test-file-stub"
        />
        <p
          className="map-app-header-brand-text"
        >
          map
        </p>
      </div>
    </div>
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <button
          className="map-app-header-user-button"
          data-testid="userButton"
          onClick={[Function]}
        >
          <img
            alt="login-header-account"
            className="map-app-header-account-image"
            src="test-file-stub"
          />
          <p
            className="map-app-header-account-text"
          >
            loginAction
          </p>
        </button>
        <img
          alt="map-app-header-apps-google-play"
          src="test-file-stub"
        />
        <img
          alt="map-app-header-apps-app-store"
          src="test-file-stub"
        />
      </div>
    </div>
  </header>
  <div
    className="device-marker-description-window"
  >
    <div
      className="marker-address-container"
    >
      <img
        alt="marker-address-image"
        className="marker-address-image"
        src="test-file-stub"
      />
      <div
        className="marker-address-loader-container"
      >
        <div
          className="marker-address-loader"
        />
      </div>
    </div>
    <div
      className="device-list-container"
    >
      <div
        className="device-list-item-container"
      >
        <div
          className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-first"
        />
        <div
          className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-first"
        />
        <img
          alt="device-list-item-image"
          className="device-list-item-image"
          src="test-file-stub"
        />
        <div
          className="device-list-item"
        >
          <p>
            test device 1
          </p>
          <button
            className="device-list-item-opaque-text"
          >
            deviceReportBroken
          </button>
        </div>
      </div>
      <div
        className="device-list-item-container"
      >
        <div
          className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-second"
        />
        <div
          className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-second"
        />
        <img
          alt="device-list-item-image"
          className="device-list-item-image"
          src="test-file-stub"
        />
        <div
          className="device-list-item"
        >
          <p>
            test device 3
          </p>
          <button
            className="device-list-item-opaque-text"
          >
            deviceReportBroken
          </button>
        </div>
      </div>
      <div
        className="device-list-item-container"
      >
        <div
          className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-third"
        />
        <div
          className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-third"
        />
        <img
          alt="device-list-item-image"
          className="device-list-item-image"
          src="test-file-stub"
        />
        <div
          className="device-list-item"
        >
          <p>
            test device 5
          </p>
          <button
            className="device-list-item-opaque-text"
          >
            deviceReportBroken
          </button>
        </div>
      </div>
      <div
        className="device-list-item-container"
      >
        <div
          className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-first"
        />
        <div
          className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-first"
        />
        <img
          alt="device-list-item-image"
          className="device-list-item-image"
          src="test-file-stub"
        />
        <div
          className="device-list-item"
        >
          <p>
            test device 6
          </p>
          <button
            className="device-list-item-opaque-text"
          >
            deviceReportBroken
          </button>
        </div>
      </div>
      <div
        className="device-list-item-container"
      >
        <div
          className="device-list-item-shadow device-list-item-shadow-left device-list-create-device-item-shadow-left"
        />
        <div
          className="device-list-item-shadow device-list-item-shadow-right device-list-create-device-item-shadow-right"
        />
        <img
          alt="device-list-item-image"
          className="device-list-item-image"
          src="test-file-stub"
        />
        <div
          className="device-list-item"
        >
          <p
            className="device-list-item-opaque-text"
          >
            deviceNoDeviceHere
          </p>
          <button
            data-testid="createDeviceButton"
            onClick={[Function]}
          >
            deviceAddDevice
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="device-map"
  />
</div>
`;

exports[`MapApp snapshot tests should match the snapshot at device management state 1`] = `
<div
  className="map-app-container"
>
  <header
    className="map-app-header"
  >
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <img
          alt="logo"
          className="map-app-header-brand-logo"
          src="test-file-stub"
        />
        <p
          className="map-app-header-brand-text"
        >
          map
        </p>
      </div>
      <div
        className="map-app-header-block terminal-search-header-block"
      >
        <img
          alt="terminal-search-image"
          src="test-file-stub"
        />
        <input
          className="terminal-search-input"
          data-testid="terminalSearch"
          placeholder="search"
          type="text"
        />
      </div>
    </div>
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block user-points-header-block"
      >
        <img
          alt="user-points-image"
          src="test-file-stub"
        />
        <span
          className="user-points"
        >
          320
        </span>
        <span
          className="user-points"
        >
          points
        </span>
      </div>
      <div
        className="map-app-header-block"
      >
        <button
          className="map-app-header-user-button"
          data-testid="userButton"
          onClick={[Function]}
        >
          <img
            alt="login-header-account"
            className="map-app-header-account-image"
            src="test-file-stub"
          />
          <p
            className="map-app-header-account-text"
          />
        </button>
        <img
          alt="map-app-header-apps-google-play"
          src="test-file-stub"
        />
        <img
          alt="map-app-header-apps-app-store"
          src="test-file-stub"
        />
      </div>
    </div>
  </header>
  <div
    className="device-map"
  />
</div>
`;

exports[`MapApp snapshot tests should match the snapshot at home screen step 1`] = `
<div
  className="map-app-container"
>
  <header
    className="map-app-header"
  >
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <img
          alt="logo"
          className="map-app-header-brand-logo"
          src="test-file-stub"
        />
        <p
          className="map-app-header-brand-text"
        >
          map
        </p>
      </div>
    </div>
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <button
          className="map-app-header-user-button"
          data-testid="userButton"
          onClick={[Function]}
        >
          <img
            alt="login-header-account"
            className="map-app-header-account-image"
            src="test-file-stub"
          />
          <p
            className="map-app-header-account-text"
          >
            loginAction
          </p>
        </button>
        <img
          alt="map-app-header-apps-google-play"
          src="test-file-stub"
        />
        <img
          alt="map-app-header-apps-app-store"
          src="test-file-stub"
        />
      </div>
    </div>
  </header>
  <div
    className="product-description-window"
  >
    <div
      className="product-description-shadow"
    />
    <div
      className="product-description-content-container"
    >
      <div
        className="product-description-text"
      >
        <h1>
          brand map
        </h1>
        <p>
          loginCallToAction
        </p>
      </div>
      <img
        alt="product-description-phone-image"
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    className="device-map"
  />
</div>
`;

exports[`MapApp snapshot tests should match the snapshot at user authentication state 1`] = `
<div
  className="map-app-container"
>
  <header
    className="map-app-header"
  >
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <img
          alt="logo"
          className="map-app-header-brand-logo"
          src="test-file-stub"
        />
        <p
          className="map-app-header-brand-text"
        >
          map
        </p>
      </div>
    </div>
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <button
          className="map-app-header-user-button"
          data-testid="userButton"
          onClick={[Function]}
        >
          <img
            alt="login-header-account"
            className="map-app-header-account-image"
            src="test-file-stub"
          />
          <p
            className="map-app-header-account-text"
          >
            loginAction
          </p>
        </button>
        <img
          alt="map-app-header-apps-google-play"
          src="test-file-stub"
        />
        <img
          alt="map-app-header-apps-app-store"
          src="test-file-stub"
        />
      </div>
    </div>
  </header>
  <div
    className="login-modal-window"
  >
    <div
      className="login-modal-container"
    >
      <div
        className="login-modal-header-container"
      >
        <img
          alt="login-modal-header-logo"
          className="login-modal-header-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          brand map
        </p>
        <p
          className="login-modal-header-description"
        >
          loginCallToAction
        </p>
      </div>
    </div>
  </div>
  <div
    className="device-map"
  />
</div>
`;
